--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,31 @@
 spring.application.name=user
-server.port=1012
+server.port=8080
+#1012
 server.address=0.0.0.0
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/user
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://mysql:3306/User
+
+spring.datasource.url=jdbc:mysql://mysql2:3306/User
+spring.datasource.username=root
+spring.datasource.password=root
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=5
+
+
 
 
 
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
@@ -18,5 +33,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.main.allow-bean-definition-overriding=true
+
 
 
