✅ Added HomeController, updated Keploy config, Dockerfile, and test files

--- a/.github/workflows/keploy.yml
+++ b/.github/workflows/keploy.yml
@@ -1,64 +1,33 @@
-name: Keploy API Tests
+name: Keploy API Testing
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
 
 jobs:
-  keploy-test:
+  test:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: User
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=10
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Set up Docker
+        run: |
+          docker build -t user-api .
+          docker network create keploy-network || true
+          docker run -d -p 8080:1012 --name user-api --network keploy-network user-api
 
-    - name: Give permission to Maven wrapper
-      run: chmod +x mvnw
+      - name: Wait for server to start
+        run: sleep 15
 
-    - name: Install Keploy
-      run: |
-        curl -s https://deb.keploy.io/install.sh | sudo bash
+      - name: Run curl to test user signup
+        run: |
+          curl -X POST http://localhost:8080/users/signup \
+            -H "Content-Type: application/json" \
+            -d '{"name":"lily","email":"lily@example.com","user_name":"lilyuser","password":"password123"}'
 
-    - name: Start Keploy in record mode
-      run: nohup keploy record --proxy-port 8080 --delay 5s &
+      - name: Run Keploy Tests
+        run: keploy test
 
-    - name: Run Spring Boot App in background
-      run: nohup ./mvnw spring-boot:run &
-
-    - name: Wait for App to start
-      run: sleep 40
-
-    - name: Send API requests
-      run: |
-        curl -X POST http://localhost:8080/users/signup \
-        -H "Content-Type: application/json" \
-        -d "{\"name\":\"Lily\",\"email\":\"lily@example.com\",\"userName\":\"lily1234\",\"password\":\"securepass\"}"
-
-        curl http://localhost:8080/users
-
-    - name: Run Keploy Tests
-      run: keploy test
