--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,31 @@
 spring.application.name=user
 server.port=8080
-#1012
 server.address=0.0.0.0
 #spring.datasource.url=jdbc:mysql://localhost:3306/user
 #spring.datasource.username=root
 #spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://mysql:3306/User
 
-spring.datasource.url=jdbc:mysql://mysql2:3306/User
+#spring.datasource.url=jdbc:mysql://mysql2:3306/User
+#spring.datasource.url=jdbc:mysql://localhost:3306/User
 spring.datasource.username=root
 spring.datasource.password=root
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/User
+
+
+
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=5
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+
 
 
 
