--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
                 <artifactId>mockito-core</artifactId>
                 <scope>test</scope>
             </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 
 
 
