--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/User
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/User
+spring.datasource.url=jdbc:mysql://mysql-db:3306/User
+
 
 
 
