removed sql container

--- a/.github/workflows/keploy.yml
+++ b/.github/workflows/keploy.yml
@@ -13,14 +13,14 @@ jobs:
       - name: 📥 Checkout Code
         uses: actions/checkout@v3
 
-      - name: 🐬 Start MySQL Container
-        run: |
-            docker network create keploy-network || true
-            docker run --name mysql-db \
-              --network keploy-network \
-              -e MYSQL_ROOT_PASSWORD=root \
-              -e MYSQL_DATABASE=User \
-              -p 3306:3306 -d mysql:8.0    
+#      - name: 🐬 Start MySQL Container
+#        run: |
+#            docker network create keploy-network || true
+#            docker run --name mysql-db \
+#              --network keploy-network \
+#              -e MYSQL_ROOT_PASSWORD=root \
+#              -e MYSQL_DATABASE=User \
+#              -p 3306:3306 -d mysql:8.0
 
       - name: 🐳 Build and Run Spring Boot Docker Container
         run: |
